--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -1,5 +1,5 @@
-pandas>=1.5.0,<2.1.0
-numpy>=1.21.0,<1.25.0
+pandas>=2.0.0
+numpy>=1.24.0
 yfinance>=0.2.0
 requests>=2.28.0
 beautifulsoup4>=4.11.0
