Add configuration system and fix deployment issues
- Add comprehensive configuration system with environment detection
- Fix import errors in configuration modules
- Fix visualization errors with symbol/stock column mismatch
- Add Docker Compose setup for local development
- Add deployment guides and documentation
- Update database adapters to use new configuration system
- Fix momentum calculation column references

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,14 @@ logs/
 .env.local
 .env.production
 
+# Configuration files (local development)
+web_app/config/local.env
+web_app/config/*.env
+!web_app/config/*.template
+!web_app/config/*.example
+# Allow Python config files
+!web_app/config/*.py
+
 # Temporary files
 *.tmp
 *.temp
