--- a/web_app/Dockerfile
+++ b/web_app/Dockerfile
@@ -1,15 +1,20 @@
-FROM python:3.11-slim
+# Use Python 3.13 slim image
+FROM python:3.13-slim
 
 # Set working directory
 WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
-    sqlite3 \
+    gcc \
+    g++ \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first for better caching
 COPY requirements.txt .
+
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
@@ -18,11 +23,11 @@ COPY . .
 # Create data directory
 RUN mkdir -p data
 
-# Expose port
+# Expose Streamlit port
 EXPOSE 8501
 
 # Health check
 HEALTHCHECK CMD curl --fail http://localhost:8501/_stcore/health
 
-# Run the application
+# Run Streamlit
 CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
